--- a/src/app/dashboard/dashboard/forum-action/forum-action.component.html
+++ b/src/app/dashboard/dashboard/forum-action/forum-action.component.html
@@ -22,26 +22,30 @@
               <label class="col-sm-2 control-label">点击广告图片操作</label>
               <div class="col-sm-10">
                 <div class="radio">
-                  <label>
+                  <label class="i-checks">
                 <input type="radio" name="optionsRadios" id="optionsRadios1" value="url" [(ngModel)]= "action.type" checked>
+               <i></i>
                 打开指定的链接地址
               </label>
                 </div>
                 <div class="radio">
-                  <label>
+                  <label class="i-checks">
                 <input type="radio" name="optionsRadios" id="optionsRadios2" value="brand" [(ngModel)]= "action.type">
+                <i></i>
                 打开指定的品牌信息
               </label>
                 </div>
-                <div class="radio">
-                  <label>
+                <div class="radio" >
+                  <label class="i-checks">
                 <input type="radio" name="optionsRadios" id="optionsRadios3" value="product" [(ngModel)]= "action.type">
+                <i></i>
                 打开指定的产品信息
               </label>
                 </div>
                 <div class="radio">
-                  <label>
+                  <label class="i-checks">
                 <input type="radio" name="optionsRadios" id="optionsRadios4" value="news" [(ngModel)]= "action.type">
+                <i></i>
                 打开指定的新闻信息
               </label>
                 </div>
