--- a/src/app/dashboard/dashboard/product/product.component.html
+++ b/src/app/dashboard/dashboard/product/product.component.html
@@ -3,7 +3,7 @@
     <div class="bg-light lter b-b wrapper-md">
       <h1 class="m-n font-thin h3">产品信息配置</h1>
     </div>
-    <div class="wrapper-md" ng-controller="FormDemoCtrl">
+    <div class="wrapper-md" >
       <div class="panel panel-default">
         <div class="panel-heading font-bold">
           产品信息表
