--- a/src/app/dashboard/dashboard/forum-list/forum-list.component.html
+++ b/src/app/dashboard/dashboard/forum-list/forum-list.component.html
@@ -4,7 +4,7 @@
     <div class="bg-light lter b-b wrapper-md">
       <h1 class="m-n font-thin h3">论坛信息</h1>
     </div>
-    <div class="wrapper-md" ng-controller="FormDemoCtrl">
+    <div class="wrapper-md" >
       <div class="panel panel-default">
         <div class="panel-heading font-bold">
           论坛信息
