--- a/src/app/dashboard/dashboard/news/news.component.html
+++ b/src/app/dashboard/dashboard/news/news.component.html
@@ -7,7 +7,7 @@
     <div class="bg-light lter b-b wrapper-md">
       <h1 class="m-n font-thin h3">新闻信息</h1>
     </div>
-    <div class="wrapper-md" ng-controller="FormDemoCtrl">
+    <div class="wrapper-md" >
       <div class="panel panel-default">
         <div class="panel-heading font-bold">
           新闻信息
