add confirm and delete

--- a/src/app/dashboard/dashboard/brand/brand.component.html
+++ b/src/app/dashboard/dashboard/brand/brand.component.html
@@ -100,11 +100,11 @@
           <table id="adsListTable" ui-jq="dataTable" class="table table-striped b-t b-b">
             <thead>
               <tr>
-                <th style="width:20%">名称</th>
-                <th style="width:25%">公司</th>
-                <th style="width:25%">地址</th>
-                <th style="width:20%">logo地址</th>
-                <th style="width:10%">修改</th>
+                <th style="width:10%">名称</th>
+                <th style="width:15%">公司</th>
+                <th style="width:20%">地址</th>
+                <th style="width:25%">logo地址</th>
+                <th style="width:20%">修改</th>
               </tr>
             </thead>
             <tbody>
@@ -113,7 +113,11 @@
                 <td>{{brandinfo.company}}</td>
                 <td>{{brandinfo.address}}</td>
                 <td>{{brandinfo.icon}}</td>
-                <td><button class="delete" (click)="update(brandinfo); $event.stopPropagation()">x</button></td>
+                <td>
+                 <button class="col-sm-1 btn m-b-xs w-xs btn-info " style="width:50px" (click)="update(brandinfo); $event.stopPropagation()">U</button>                  &nbsp;&nbsp;
+                  <button class="col-sm-1 col-sm-offset-1 btn m-b-xs w-xs btn-danger"  style="width:50px" (click)="delete(brandinfo); $event.stopPropagation()">X</button>
+                
+                </td>
               </tr>
             </tbody>
           </table>
