--- a/src/app/dashboard/dashboard/forum-action/forum-action.component.html
+++ b/src/app/dashboard/dashboard/forum-action/forum-action.component.html
@@ -4,7 +4,7 @@
     <div class="bg-light lter b-b wrapper-md">
       <h1 class="m-n font-thin h3">论坛活动配置</h1>
     </div>
-    <div class="wrapper-md" ng-controller="FormDemoCtrl">
+    <div class="wrapper-md">
       <div class="panel panel-default">
         <div class="panel-heading font-bold">
           论坛活动信息表
@@ -35,7 +35,7 @@
                 打开指定的品牌信息
               </label>
                 </div>
-                <div class="radio" >
+                <div class="radio">
                   <label class="i-checks">
                 <input type="radio" name="optionsRadios" id="optionsRadios3" value="product" [(ngModel)]= "action.type">
                 <i></i>
@@ -101,14 +101,14 @@
           活动信息列表
         </div>
         <div class="table-responsive">
-          <table id="actionListTable" class="table table-striped b-t b-b">
+          <table id="actionListTable" ui-jq="dataTable" class="table table-striped b-t b-b">
             <thead>
               <tr>
                 <th style="width:20%">标题</th>
-                <th style="width:25%">类型</th>
-                <th style="width:25%">值</th>
+                <th style="width:15%">类型</th>
+                <th style="width:15%">值</th>
                 <th style="width:20%">图片地址</th>
-                <th style="width:10%">修改</th>
+                <th style="width:20%">修改</th>
               </tr>
             </thead>
             <tbody>
@@ -117,7 +117,12 @@
                 <td>{{action.type}}</td>
                 <td>{{action.value}}</td>
                 <td>{{action.path}}</td>
-                <td><button class="delete" (click)="update(ads); $event.stopPropagation()">x</button></td>
+                <td>
+                  
+                  <button class="col-sm-1 btn m-b-xs w-xs btn-info " style="width:50px" (click)="update(action); $event.stopPropagation()">U</button>                  &nbsp;&nbsp;
+                  <button class="col-sm-1 col-sm-offset-1 btn m-b-xs w-xs btn-danger"  style="width:50px" (click)="delete(action); $event.stopPropagation()">X</button>
+                
+                  </td>
               </tr>
             </tbody>
           </table>
