--- a/src/app/dashboard/dashboard/product/product.component.html
+++ b/src/app/dashboard/dashboard/product/product.component.html
@@ -134,7 +134,7 @@
             <div class="line line-dashed b-b line-lg pull-in"></div>
             <label class="col-sm-2 control-label">产品简介</label>
             <div class="col-sm-10">
-              <div [froalaEditor] name="productContent" id="productContent" [(ngModel)]="product.content"></div>
+              <div ui-jq="froalaEditor" [froalaEditor] name="productContent" id="productContent" [(ngModel)]="product.content"></div>
             </div>
             <div class="line line-dashed b-b line-lg pull-in"></div>
 
