--- a/src/app/dashboard/dashboard/brand/brand.component.html
+++ b/src/app/dashboard/dashboard/brand/brand.component.html
@@ -72,7 +72,7 @@
             <div class="line line-dashed b-b line-lg pull-in"></div>
             <label class="col-sm-2 control-label">请输入论坛信息</label>
             <div class="col-sm-10">
-              <div [froalaEditor] name="brandContent" id="brandContent" [(ngModel)]="brand.content"></div>
+              <div ui-jq="froalaEditor" [froalaEditor] name="brandContent" id="brandContent" [(ngModel)]="brand.content"></div>
             </div>
             <div class="line line-dashed b-b line-lg pull-in"></div>
 
