--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -364,10 +364,12 @@
             <li class="line dk"></li>
 
             <li class="hidden-folded padder m-t m-b-sm text-muted text-xs">
+              <a [routerLink]='["ads"]'>
               <span>配置信息</span>
+              </a>
             </li>
             <li>
-              <a href class="auto">      
+              <a [routerLink]='["ads"]' class="auto">      
                   <span class="pull-right text-muted">
                     <i class="fa fa-fw fa-angle-right text"></i>
                     <i class="fa fa-fw fa-angle-down text-active"></i>
@@ -520,7 +522,7 @@
                   <span>省市信息</span>
                 </a>
               <ul class="nav nav-sub dk">
-                 <li class="nav-sub-header">
+                <li class="nav-sub-header">
                   <a href>
                       <span>省市信息</span>
                     </a>
