--- a/src/app/dashboard/dashboard/news/news.component.html
+++ b/src/app/dashboard/dashboard/news/news.component.html
@@ -23,7 +23,7 @@
             <div class="line line-dashed b-b line-lg pull-in"></div>
             <label class="col-sm-2 control-label">请输入新闻信息</label>
             <div class="col-sm-10">
-              <div [froalaEditor] name="newsContent" id="newsContent" [(ngModel)]="editNews.content"></div>
+              <div ui-jq="froalaEditor" [froalaEditor] name="newsContent" id="newsContent" [(ngModel)]="editNews.content"></div>
             </div>
             <div class="line line-dashed b-b line-lg pull-in"></div>
             <div class="form-group">
