--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,19 +1,26 @@
-<div class="app app-header-fixed ">
+ <div class="app app-header-fixed app-aside-fixed app-aside-folded"> 
+
   <!-- header -->
   <header id="header" class="app-header navbar" role="menu">
     <!-- navbar header -->
-    <div class="navbar-header bg-dark">
-      <!-- brand -->
-      <a href="#" class="navbar-brand text-lt">
+      <div class="navbar-header bg-dark">
+        <button class="pull-right visible-xs dk" ui-toggle-class="show" target=".navbar-collapse">
+          <i class="glyphicon glyphicon-cog"></i>
+        </button>
+        <button class="pull-right visible-xs" ui-toggle-class="off-screen" target=".app-aside" ui-scroll="app">
+          <i class="glyphicon glyphicon-align-justify"></i>
+        </button>
+        <!-- brand -->
+        <a href="#/" class="navbar-brand text-lt">
           <i class="fa fa-btc"></i>
           <img src="./public/img/logo.png" alt="." class="hide">
           <span class="hidden-folded m-l-xs">乐器有家</span>
         </a>
-      <!-- / brand -->
-    </div>
-    <!-- / navbar header -->
+        <!-- / brand -->
+      </div>
+      <!-- / navbar header -->
 
-    <!-- navbar collapse -->
+    <!-- navbar collapse app-aside-folded  navbar-collapse-->
     <div class="collapse pos-rlt navbar-collapse box-shadow bg-white-only">
       <!-- buttons -->
       <div class="nav navbar-nav hidden-xs">
@@ -27,7 +34,7 @@
       </div>
       <!-- / buttons -->
 
-      <!-- link and dropdown -->
+      <!-- 
       <ul class="nav navbar-nav hidden-sm">
         <li class="dropdown pos-stc">
           <a href="#" data-toggle="dropdown" class="dropdown-toggle">
@@ -156,14 +163,15 @@
           </ul>
         </li>
       </ul>
-      <!-- / link and dropdown -->
+       link and dropdown -->
 
       <!-- search form -->
-      <form class=" col-sm-4 navbar-form navbar-form-sm navbar-left shift" ui-shift="prependTo" data-target=".navbar-collapse"
+
+      <form class="navbar-form navbar-form-sm navbar-left shift" ui-shift="prependTo" data-target=".navbar-collapse"
         role="search">
         <div class="  form-group">
           <div class="input-group">
-            <input type="text" typeahead="state for state in states | filter:$viewValue | limitTo:8" class="form-control input-sm bg-light no-border rounded padder"
+            <input type="text" style="width:300px" typeahead="state for state in states | filter:$viewValue | limitTo:8" class="form-control input-sm bg-light no-border rounded padder"
               placeholder="查询...">
             <span class="input-group-btn">
                 <button type="submit" class="btn btn-sm bg-light rounded"><i class="fa fa-search"></i></button>
@@ -214,24 +222,23 @@
           <!-- / dropdown -->
         </li>
 
-        <li>
-          <div class="nav navbar-nav hidden-xs">
-        <a [routerLink]='["/login"]' class="btn no-shadow navbar-btn">
-            <b>登录</b>
+        <li class="dropdown" *ngIf="!isAnymouse">
+          <a [routerLink]='["/login"]' data-toggle="dropdown" class="dropdown-toggle clear" data-toggle="dropdown">
+              <span class="hidden-sm hidden-md">登录</span>
           </a>
-        <a [routerLink]='["/register"]' class="btn no-shadow navbar-btn">
-           <b>注册</b>
-          </a>
-      </div>
         </li>
-
-        <li class="dropdown" *ngIf="false">
+        <li class="dropdown" *ngIf="!isAnymouse">
+          <a [routerLink]='["/register"]' data-toggle="dropdown" class="dropdown-toggle clear" data-toggle="dropdown">
+              <span class="hidden-sm hidden-md">注册</span>
+          </a>
+        </li>
+        <li class="dropdown" *ngIf="isAnymouse">
           <a href="#" data-toggle="dropdown" class="dropdown-toggle clear" data-toggle="dropdown">
               <span class="thumb-sm avatar pull-right m-t-n-sm m-b-n-sm m-l-sm">
                 <img src="./public/img/a0.jpg" alt="...">
                 <i class="on md b-white bottom"></i>
               </span>
-              <span class="hidden-sm hidden-md">John.Smith</span> <b class="caret"></b>
+              <span class="hidden-sm hidden-md">{{avatorName}}</span> <b class="caret"></b>
             </a>
           <!-- dropdown -->
           <ul class="dropdown-menu animated fadeInRight w">
@@ -260,7 +267,8 @@
             </li>
             <li class="divider"></li>
             <li>
-              <a ui-sref="access.signin">Logout</a>
+             <button type="button" class="btn btn-link" (click)="logout()">退出</button>
+             
             </li>
           </ul>
           <!-- / dropdown -->
@@ -274,6 +282,375 @@
     <!-- / navbar collapse -->
   </header>
   <!-- / header -->
+
+    <!-- aside -->
+
+  <aside id="aside" class="app-aside hidden-xs bg-dark">
+      <div class="aside-wrap">
+        <div class="navi-wrap">
+          <!-- user -->
+          <div class="clearfix hidden-xs text-center hide" id="aside-user">
+            <div class="dropdown wrapper">
+              <a href="app.page.profile">
+                <span class="thumb-lg w-auto-folded avatar m-t-sm">
+                  <img src="./public/img/a0.jpg" class="img-full" alt="...">
+                </span>
+              </a>
+              <a href="#" data-toggle="dropdown" class="dropdown-toggle hidden-folded">
+                <span class="clear">
+                  <span class="block m-t-sm">
+                    <strong class="font-bold text-lt">{{avatorName}}</strong> 
+                    <b class="caret"></b>
+                  </span>
+                </span>
+              </a>
+              <!-- dropdown -->
+              <ul class="dropdown-menu animated fadeInRight w hidden-folded">
+                <li class="wrapper b-b m-b-sm bg-info m-t-n-xs">
+                  <span class="arrow top hidden-folded arrow-info"></span>
+                  <div>
+                    <p>300mb of 500mb used</p>
+                  </div>
+                  <div class="progress progress-xs m-b-none dker">
+                    <div class="progress-bar bg-white" data-toggle="tooltip" data-original-title="50%" style="width: 50%"></div>
+                  </div>
+                </li>
+                <li>
+                  <a href>Settings</a>
+                </li>
+                <li>
+                  <a href="page_profile.html">Profile</a>
+                </li>
+                <li>
+                  <a href>
+                    <span class="badge bg-danger pull-right">3</span>
+                    Notifications
+                  </a>
+                </li>
+                <li class="divider"></li>
+                <li>
+                  <a href="page_signin.html">Logout</a>
+                </li>
+              </ul>
+              <!-- / dropdown -->
+            </div>
+            <div class="line dk hidden-folded"></div>
+          </div>
+          <!-- / user -->
+         <!-- nav -->
+          <nav ui-nav class="navi clearfix">
+            <ul class="nav">
+              <li class="hidden-folded padder m-t m-b-sm text-muted text-xs">
+                <span>Navigation</span>
+              </li>
+              <li>
+                <a href [ngClass]="{auto:true,dk:true}">      
+                  <span class="pull-right text-muted">
+                    <i class="fa fa-fw fa-angle-right text"></i>
+                    <i class="fa fa-fw fa-angle-down text-active"></i>
+                  </span>
+                  <i class="glyphicon glyphicon-home icon text-primary-dker" style="font-size: 25px"></i>
+                  <span class="font-bold">Dashboard</span>
+                </a>
+                <ul class="nav nav-sub dk">
+                  <li class="nav-sub-header">
+                    <a href>
+                      <span>Dashboard</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="index.html">
+                      <span>Dashboard v1</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="dashboard.html">
+                      <b class="label bg-info pull-right">N</b>
+                      <span>Dashboard v2</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="mail.html">
+                  <b class="badge bg-info pull-right">9</b>
+                  <i class="glyphicon glyphicon-envelope icon text-info-lter"></i>
+                  <span class="font-bold">Email</span>
+                </a>
+              </li>
+              <li class="line dk"></li>
+
+              <li class="hidden-folded padder m-t m-b-sm text-muted text-xs">
+                <span>Components</span>
+              </li>
+              <li>
+                <a href [ngClass]="{auto:true,dk:false}">      
+                  <span class="pull-right text-muted">
+                    <i class="fa fa-fw fa-angle-right text"></i>
+                    <i class="fa fa-fw fa-angle-down text-active"></i>
+                  </span>
+                  <b class="badge bg-info pull-right">3</b>
+                  <i class="glyphicon glyphicon-th" style="font-size: 25px"></i>
+                  <span>Layout</span>
+                </a>
+                <ul class="nav nav-sub dk">
+                  <li class="nav-sub-header">
+                    <a href>
+                      <span>Layout</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="layout_app.html">
+                      <span>Application</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="layout_fullwidth.html">
+                      <span>Full width</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="layout_boxed.html">
+                      <span>Boxed layout</span>
+                    </a>
+                  </li>      
+                </ul>
+              </li>
+              <li>
+                <a href class="auto">
+                  <span class="pull-right text-muted">
+                    <i class="fa fa-fw fa-angle-right text"></i>
+                    <i class="fa fa-fw fa-angle-down text-active"></i>
+                  </span>
+                  <i class="glyphicon glyphicon-briefcase icon" style="font-size: 25px"></i>
+                  <span>UI Kits</span>
+                </a>
+                <ul class="nav nav-sub dk">
+                  <li class="nav-sub-header">
+                    <a href>
+                      <span>UI Kits</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="ui_button.html">
+                      <span>Buttons</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="ui_icon.html">
+                      <b class="badge bg-info pull-right">3</b>
+                      <span>Icons</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="ui_grid.html">
+                      <span>Grid</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="ui_widget.html">
+                      <b class="badge bg-success pull-right">13</b>
+                      <span>Widgets</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="ui_sortable.html">
+                      <span>Sortable</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="ui_portlet.html">
+                      <span>Portlet</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="ui_timeline.html">
+                      <span>Timeline</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="ui_jvectormap.html">
+                      <span>Vector Map</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href class="auto">
+                  <span class="pull-right text-muted">
+                    <i class="fa fa-fw fa-angle-right text"></i>
+                    <i class="fa fa-fw fa-angle-down text-active"></i>
+                  </span>
+                  <b class="label bg-primary pull-right">2</b>
+                  <i class="glyphicon glyphicon-list"></i>
+                  <span>Table</span>
+                </a>
+                <ul class="nav nav-sub dk">
+                  <li class="nav-sub-header">
+                    <a href>
+                      <span>Table</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="table_static.html">
+                      <span>Table static</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="table_datatable.html">
+                      <span>Datatable</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="table_footable.html">
+                      <span>Footable</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href class="auto">
+                  <span class="pull-right text-muted">
+                    <i class="fa fa-fw fa-angle-right text"></i>
+                    <i class="fa fa-fw fa-angle-down text-active"></i>
+                  </span>
+                  <i class="glyphicon glyphicon-edit" style="font-size: 25px"></i>
+                  <span>Form</span>
+                </a>
+                <ul class="nav nav-sub dk">
+                  <li class="nav-sub-header">
+                    <a href>
+                      <span>Form</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="form_element.html">
+                      <span>Form elements</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="ui_chart.html">
+                  <i class="glyphicon glyphicon-signal"></i>
+                  <span>Chart</span>
+                </a>
+              </li>
+              <li>
+                <a href class="auto">
+                  <span class="pull-right text-muted">
+                    <i class="fa fa-fw fa-angle-right text"></i>
+                    <i class="fa fa-fw fa-angle-down text-active"></i>
+                  </span>
+                  <i class="glyphicon glyphicon-file icon"></i>
+                  <span>Pages</span>
+                </a>
+                <ul class="nav nav-sub dk">
+                  <li class="nav-sub-header">
+                    <a href>
+                      <span>Pages</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="page_profile.html">
+                      <span>Profile</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="page_post.html">
+                      <span>Post</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="page_search.html">
+                      <span>Search</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="page_invoice.html">
+                      <span>Invoice</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="page_price.html">
+                      <span>Price</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="page_lockme.html">
+                      <span>Lock screen</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="page_signin.html">
+                      <span>Signin</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="page_signup.html">
+                      <span>Signup</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="page_forgotpwd.html">
+                      <span>Forgot password</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="page_404.html">
+                      <span>404</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+
+              <li class="line dk hidden-folded"></li>
+
+              <li class="hidden-folded padder m-t m-b-sm text-muted text-xs">          
+                <span>Your Stuff</span>
+              </li>  
+              <li>
+                <a href="page_profile.html">
+                  <i class="icon-user icon text-success-lter"></i>
+                  <b class="badge bg-success pull-right">30%</b>
+                  <span>Profile</span>
+                </a>
+              </li>
+              <li>
+                <a href>
+                  <i class="icon-question icon"></i>
+                  <span>Documents</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+          <!-- nav -->
+
+          <!-- aside footer -->
+          <div class="wrapper m-t">
+            <div class="text-center-folded">
+              <span class="pull-right pull-none-folded">60%</span>
+              <span class="hidden-folded">Milestone</span>
+            </div>
+            <div class="progress progress-xxs m-t-sm dk">
+              <div class="progress-bar progress-bar-info" style="width: 60%;">
+              </div>
+            </div>
+            <div class="text-center-folded">
+              <span class="pull-right pull-none-folded">35%</span>
+              <span class="hidden-folded">Release</span>
+            </div>
+            <div class="progress progress-xxs m-t-sm dk">
+              <div class="progress-bar progress-bar-primary" style="width: 35%;">
+              </div>
+            </div>
+          </div>
+          <!-- / aside footer -->
+        </div>
+      </div>
+  </aside>
+  <!-- / aside -->
+
   <router-outlet></router-outlet>
   <!-- footer -->
   <footer id="footer" class="app-footer" role="footer">
