--- a/src/app/home/home/register/register.component.html
+++ b/src/app/home/home/register/register.component.html
@@ -5,14 +5,14 @@
     <a href class="navbar-brand block m-t">乐器有家</a>
     <div class="m-b-lg">
       <div class="wrapper text-center">
-        <strong>创建账号发现您感兴趣的信息</strong>
+        <strong>创建账号发现您感兴趣的信息!</strong>
       </div>
       <form name="registerform" #f="ngForm" (ngSubmit)="register">
         <div class="text-danger wrapper text-center" ng-show="authError">
 
         </div>
         <div class="list-group list-group-sm">
-          <div class="list-group-item">
+          <div [ngClass]="{'list-group-item': true,'has-error':true}">
             <input placeholder="昵称" name="avatorName" class="form-control no-border" [(ngModel)]="avatorName"  required>
           </div>
           <div class="list-group-item">
@@ -24,9 +24,14 @@
         </div>
         <div class="checkbox m-b-md m-t-none">
           <label class="i-checks">
-              <input type="checkbox" ng-model="agree" required><i></i> 同意 <a href="#">本网站的规则</a>
+              <input type="checkbox" name="checked" [(ngModel)]="checked" required><i></i> 同意 <a href="#">本网站的规则</a>
             </label>
         </div>
+        <div class="alert alert-danger" *ngIf="showAlert">
+        <ul class="margin-bottom-none padding-left-lg">
+          <li *ngFor="let mes of messages">{{mes}}</li>
+        </ul>
+      </div>
         <button type="submit" class="btn btn-lg btn-primary btn-block" (click)="signup()" ng-disabled='form.$invalid'>注册</button>
         <div class="line line-dashed"></div>
         <p class="text-center"><small>已经有账号?</small></p>
