--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -5194,3 +5194,105 @@ a.text-#000000:hover {
     background-color: #7266ba;
   }
 }
+
+#section .figure:last-child
+{
+	border-bottom:none;
+}
+
+.figure
+{
+	display:block;
+	position:relative;
+	overflow:hidden;
+	border-bottom:#e8e8e8 solid 1px;
+	margin:0 7% 0 0;
+	padding:20px;
+}
+
+.figure .article
+{
+	float:left;
+	margin-right:20px;
+	display:flex;
+	justify-content:center;
+	flex-direction:column;
+}
+
+.figure .figcaption
+{
+	font-size:25px;
+	font-weight:400;
+	max-height:3em;
+	line-height:1.5em;
+	overflow:hidden;
+	text-overflow:ellipsis;
+	display:0;
+	-webkit-line-clamp:2;
+	line-clamp:2;
+	-webkit-box-orient:vertical;
+	margin:0 0 2px;
+  padding:0;
+  bottom:10px;
+}
+
+.subtitle
+{
+	color:#b1b1b1;
+  font-size:14px;
+  position:absolute;
+  bottom:10px;
+}
+
+.subtitle>a,.subtitle>span
+{
+	display:inline-block;
+	margin-right:10px;
+}
+
+.subtitle_mark
+{
+	font-size:12px;
+	border-radius:2px;
+	vertical-align:sub;
+	white-space:nowrap;
+	padding:1px 5px;
+}
+
+.subtitle_mark img
+{
+	height:17px;
+}
+
+.figure .img
+{
+	float:right;
+	width:30%;
+	height:130px;
+	background-size:cover;
+	background-position:center;
+}
+
+.figure .img a
+{
+	display:block;
+	width:100%;
+	height:100%;
+}
+
+.figure_loading
+{
+	height:80px;
+	line-height:80px;
+	text-align:center;
+	color:#c8c8c8;
+}
+
+.figure a
+{
+	text-decoration:none;
+	color:inherit;
+}
+
+
+
