--- a/src/app/dashboard/dashboard/brand/brand.component.html
+++ b/src/app/dashboard/dashboard/brand/brand.component.html
@@ -64,7 +64,7 @@
               <label class="col-sm-2 control-label">品牌logo</label>
               <div class="col-sm-10">
                 <form id="uploadForm" enctype="multipart/form-data" action="/api/web/file" method="post">
-                  <input ui-jq="filestyle" name="userPhoto" type="file" data-icon="false" (change)="changeListener($event)" data-classButton="btn btn-default"
+                  <input ui-jq="filestyle" accept="image/*" name="userPhoto" type="file" data-icon="false" (change)="changeListener($event)" data-classButton="btn btn-default"
                     data-classInput="form-control inline v-middle input-s">
                 </form>
               </div>
