--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -251,18 +251,18 @@
               </div>
             </li>
             <li>
-              <a href>
+              <a routerLink="profile" >
                   <span class="badge bg-danger pull-right">30%</span>
-                  <span>Settings</span>
+                  <span>设置</span>
                 </a>
             </li>
-            <li>
+            <!-- <li>
               <a ui-sref="app.page.profile">Profile</a>
-            </li>
+            </li> -->
             <li>
-              <a ui-sref="app.docs">
+              <a routerLink="help">
                   <span class="label bg-info pull-right">new</span>
-                  Help
+                  帮助
                 </a>
             </li>
             <li class="divider"></li>
